@@ -84,6 +84,7 @@ dir_$(CONFIG_USER_SAMBA)		    += samba
 dir_$(CONFIG_USER_SAMBA3)		    += samba3
 dir_$(CONFIG_USER_MINIDLNA)		    += minidlna
 dir_$(CONFIG_USER_TRANSMISSION)		    += transmission
+dir_$(CONFIG_USB_STORAGE)		    += optware
 
 #wifi simle config
 dir_$(CONFIG_USER_WSC)                	    += wsc_upnp
@@ -94,6 +95,7 @@ dir_$(CONFIG_RT2880_APP)		    += rt2880_app
 #need last busybox and goahead
 dir_$(CONFIG_USER_BUSYBOX_BUSYBOX)          += busybox
 dir_$(CONFIG_USER_GOAHEAD_HTTPD)	    += goahead
+
 
 all: config
 	CC=$(CONFIG_CROSS_COMPILER_PATH)/mipsel-linux-uclibc-gcc ; \
