@@ -1,0 +1,6 @@
+all:
+
+clean:
+
+romfs:
+	$(ROMFSINST) -S optware-install.sh /bin/optware-install.sh
